# CPPExampleBot

./: CMakeLists.txt  LICENSE  README.md  build.bat  examplebot.cc  examplebot.h  main.cc
dlls/: copy-dlls.py
rlbot/: CppPythonAgent.cfg  CppPythonAgent.py  rlbot.cfg  run.sh
rlbot-dev/: CppPythonAgent.cfg  CppPythonAgent.py  rlbot.cfg
rlbot-release/: CppPythonAgent.cfg  CppPythonAgent.py  rlbot.cfg
